k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ecom
  name: frontend-deployment
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: vijay1304/frontend-h:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
---
#frontend-service
apiVersion: v1
kind: Service
metadata:
  namespace: ecom
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80

---
#api gatway deploymnet
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ecom
  name: api-deployment
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: vijay1304/api-h:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 4000

---
#api-service
apiVersion: v1
kind: Service
metadata:
  namespace: ecom
  name: api-gateway-service
spec:
  selector:
    app: api
  ports:
  - port: 4000
    targetPort: 4000

---
#order-deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ecom
  name: order-deployment
spec:
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
      - name: order
        image: vijay1304/order-h:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3003

---
#order-service
apiVersion: v1
kind: Service
metadata:
  namespace: ecom
  name: order-service
spec:
  selector:
    app: order
  ports:
  - port: 3003
    targetPort: 3003

---
#payement-deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ecom
  name: payment-deployment
spec:
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
      - name: payment
        image: vijay1304/payment-h:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3004

---
#payment-service

apiVersion: v1
kind: Service
metadata:
  namespace: ecom
  name: payment-service
spec:
  selector:
    app: payment
  ports:
  - port: 3004
    targetPort: 3004

---
#product-deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ecom
  name: product-deployment
spec:
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
      - name: product
        image: vijay1304/product-h:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3002

---
#product-service
apiVersion: v1
kind: Service
metadata:
  namespace: ecom
  name: product-service
spec:
  selector:
    app: product
  ports:
  - port: 3002
    targetPort: 3002

---
#user deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ecom
  name: user-deployment
spec:
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user
        image: vijay1304/user-h:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3001

---
#user service
apiVersion: v1
kind: Service
metadata:
  namespace: ecom
  name: user-service
spec:
  selector:
    app: user
  ports:
  - port: 3001
    targetPort: 3001


---
#mongodb-deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ecom
  name: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:6
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 27017


---
#mongo-service
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: ecom
spec:
  selector:
    app: mongo
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ecom
  name: frontend-myingress
  labels:
    app.kubernetes.io/name: myingress
spec:
  rules:
  - host: vijay.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-service
            port: 
              number: 80
